--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>GCE VM Platform</title>
+    <title>Facet Platform</title>
   </head>
   <body>
     <div id="root"></div>
